[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Scripts/PortalPairs.gd" type="Script" id=1]

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("Portal1_VP")

[sub_resource type="ViewportTexture" id=2]
viewport_path = NodePath("Portal2_VP")

[node name="PortalPairs" type="Spatial"]
script = ExtResource( 1 )

[node name="Portal1_VP" type="Viewport" parent="."]
size = Vector2( 1024, 600 )
render_target_v_flip = true
render_target_update_mode = 3

[node name="Camera" type="Camera" parent="Portal1_VP"]
cull_mask = 3

[node name="Portal2_VP" type="Viewport" parent="."]
size = Vector2( 1024, 600 )
render_target_v_flip = true
render_target_update_mode = 3

[node name="Camera" type="Camera" parent="Portal2_VP"]
cull_mask = 3

[node name="Portal1_Sprite" type="Sprite" parent="."]
texture = SubResource( 1 )
offset = Vector2( 512, 300 )
region_enabled = true
region_rect = Rect2( 0, 0, 1024, 600 )

[node name="Portal2_Sprite" type="Sprite" parent="."]
texture = SubResource( 2 )
